--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "yt-downloader"
-version = "0.2.0"
+version = "0.3.0"
 description = "Modular YouTube playlist downloader with captions, resume, dry-run, and reporting"
 authors = [{ name = "Khaled" }]
 readme = "README.md"
@@ -16,7 +16,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "pytube>=15.0.0",
+    "yt-dlp>=2025.9.5",
     "youtube-transcript-api>=1.2.2",
     "rich>=14.1.0",
 ]
